--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="textSaving">保存中</string>
     <string name="textFetching">查询中</string>
     <string name="textBack">返回</string>
+    <string name="textSync">同步</string>
 
     <string name="hintTitle">请输入标题</string>
     <string name="hintDescription">请输入描述</string>
@@ -38,6 +39,11 @@
     <string name="colTaskId">task_id</string>
     <string name="colIsNext">is_next</string>
     <string name="colPosition">position</string>
+    <string name="colUrl">url</string>
+    <string name="colSyncUrl">sync_url</string>
+    <string name="colSyncTables">sync_tables</string>
+
+    <string name="charUTF8">UTF-8</string>
 
     <string name="valSelfUUID">33f28298517249798c23e486c9926c95</string>
     <string name="val1">1</string>
